# fas-rs-manager

./: .editorconfig  gradle.properties  settings.gradle.kts
.github/workflows/: ci-build.yml
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/fasRs/manager/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/fas_rs/manager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/fasRs/manager/: IRootIPC.aidl
app/src/main/java/com/fasRs/manager/: AnimationProfile.kt  AppListPagingSource.kt  Collections.kt  Destinations.kt  FasRsState.kt  GlobalViewModel.kt  MainActivity.kt  MainScreen.kt  Mode.kt  ModeSetting.kt  ModeSettingCard.kt  PackageInfo.kt  SettingCard.kt  SettingCards.kt  State.kt  Title.kt  Utils.kt
app/src/main/java/com/fasRs/manager/modeSetting/: AddApp.kt  AddAppScreen.kt  AddAppScreenViewModel.kt  AppCard.kt  ModeSetting.kt  ModeSettingCard.kt  ModeSettingScreen.kt  ModeSettingScreenViewModel.kt  ModeSettingViewModel.kt
app/src/main/java/com/fasRs/manager/root/: Native.kt  RootConnection.kt  RootService.kt
app/src/main/java/com/fas_rs/manager/: MainActivity.kt  SettingCard.kt  Title.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/rust/backend/: Cargo.toml
app/src/main/rust/backend/src/: config.rs  lib.rs  powercfg.rs  tools.rs
app/src/test/java/com/fasRs/manager/: ExampleUnitTest.kt
app/src/test/java/com/fas_rs/manager/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
